# sam3dmed

./: .gitignore  REPORT_sam3d_tokens_and_mot.md  pyproject.toml  requirements.dev.txt  review.md  review_zh.md
.github/workflows/: test.yml
configs/: train.yaml
markdown/: dataproc.md  demand.md  paper_and_code.md  plan.md  quickstart_training.md  status.md
notebook/: inference.py
sam3d_objects/data/dataset/tdfy/: preprocessor.py
sam3d_objects/data/dataset/ts/: __init__.py  slice_augmentations.py  ts_nnunet_dataloader.py  ts_sam3d_dataloader.py
sam3d_objects/model/: lora.py
sam3d_objects/model/backbone/tdfy_dit/representations/mesh/: utils_cube.py
sam3d_objects/model/backbone/tdfy_dit/representations/mesh/flexicubes/: flexicubes.py
sam3d_objects/utils/: metrics.py
scripts/: download_hf_checkpoints.py  eval_medical.py  readme.md  readme_cn.md  reprocess_ts_nifti.py  run_medical_pipeline.sh  test_medical_pipeline.sh  test_ts_sam3d_dataset.py  train_medical.py  train_medical_hydra.py  validate_pipeline_checkpoints.py  visualize_checkpoint.py  visualize_comparison.py  visualize_finetuned.py
tests/: conftest.py  test_augmentations.py  test_eval_medical.py  test_lora.py  test_metrics.py  test_train_medical.py  test_ts_sam3d_dataset.py
utils/: __init__.py  sdf_fn.py
